clusters/pez-k8s/argocd/delete-applicationset-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
$patch: delete
