clusters/pez-k8s/argocd/delete-applicationset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-applicationset-controller
$patch: delete
