clusters/pez-k8s/argocd/delete-notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-notifications-controller-metrics
$patch: delete
