clusters/pez-k8s/argocd/delete-applicationset-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-applicationset-controller-network-policy
$patch: delete
