clusters/pez-k8s/argocd/delete-dex-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-network-policy
$patch: delete
