clusters/pez-k8s/argocd/delete-notifications-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-notifications-controller-network-policy
$patch: delete
